[User-service][Swagger] Correct swagger document.
